# tcp_client_server

./: CMakeLists.txt  README.md  clientRequest.cpp  serverRequest.cpp
src/: CMakeLists.txt
src/messageLogger/: CMakeLists.txt  messageLogger.cpp  messageLogger.h
src/tcp/client/: CMakeLists.txt  client.cpp  client.h
src/tcp/server/: CMakeLists.txt  server.cpp  server.h
src/timeGet/: CMakeLists.txt  timeGet.cpp  timeGet.h
